Mon Apr 13 19:16:22 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.0.0

Mon Apr 13 21:40:14 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c (find_char_width): Don't read the
	character past the end of the text.

	* gtk/gtkrange.c (gtk_real_range_timer): If the mouse
	button has been released before the timer is activated,
	don't keep on scrolling.

	* gdk/gdk.c (gdk_event_translate): Filter subsequent configure
	events after we discard the first. Removed obsolete and
	sometimes very slow GdkOtherEvent. (Left in gdktypes.h
	with signal in GTK)

Mon Apr 13 18:03:54 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* README: update address info to gtk.org for ftp and web sites.

1998-04-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gdk/gdkregion.c (gdk_region_polygon): New function; wrapper for
	XPolygonRegion().

	* gdk/gdk.h: Added prototype for gdk_region_polygon().

	* gdk/gdktypes.h (GdkFillRule): New enum type of fill rule for polygons.

Mon Apr 13 15:04:26 1998  Michael K. Johnson <johnsonm@redhat.com>

	* gtk/testgtk.c (create_clist): removed duplicate call to
	gtk_widget_set_policy.

Mon Apr 13 05:03:11 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c (gtk_window_add_accelerator_table): check for
	accelerator table to be != NULL.
	(gtk_window_remove_accelerator_table): likewise.

Sun Apr 12 19:35:09 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* INSTALL: typo, gtk-1.0.0 should be gtk+-1.0.0
	* README: A little more intro on what gtk is...

Sun Apr 12 22:43:22 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmenuitem.c (gtk_menu_item_size_allocate):
	An old allocation error.

	* gtk/gtkviewport.c (gtk_viewport_add): Don't map
	when adding a not-VISIBLE widget to a VISIBLE 
	viewport.
	
Sun Apr 12 18:54:29 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* Changed LGPL address for FSF in all .h and .c files

Sun Apr 12 20:09:40 1998  Owen Taylor  <owt1@cornell.edu>
